# Diplom-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
compose/nginx/: default.conf
coworkingspace/: manage.py
coworkingspace/app/: admin.py  models.py  service.py  views.py
coworkingspace/app/migrations/: 0001_initial.py  0002_initial.py  0003_userreview_id_alter_userreview_coworking.py  0004_remove_userreview_id_alter_userreview_coworking.py  0005_userreview_id_alter_userreview_coworking.py
coworkingspace/coworkingspace/: asgi.py  settings.py  urls.py  wsgi.py
coworkingspace/templates/: coworking-list.html  coworking-place.html  create_form_coworking.html  create_review.html  edit_form_coworking.html  edit_form_review.html  error.html  footer.html  home.html  menu.html  show-coworking-request.html  show-review.html  show_review_all.html  users-coworking-list.html  welcome.html
coworkingspace/users/: models.py
coworkingspace/users/migrations/: 0001_initial.py
