[tool.poetry]
name = "Diplom python"
version = "0.1.0"
description = "We create coworking aplication"
authors = ["DirksAnton96 <dirks.anton96@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
djangorestframework = "^3.15.1"
django-ckeditor = "^6.7.1"
django-crispy-forms = "^2.1"
django-debug-toolbar = "^4.3.0"
python3-ldap = "^0.9.8.4"
django-python3-ldap = "^0.15.6"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"